fixed css for page size on mobile for homepae

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 header {
-	height: 100vh;
+	height: 100%;
 	overflow: hidden;
 }
 
@@ -164,19 +164,8 @@ header {
 
 @media screen and (max-width: 600px) {
 
-	header {
-		height: 100vh;
-		overflow: hidden;
-	}
-
 	.header__container {
 		grid-template-rows: 33% 66%;
-		height: 100%;
-/*		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		padding: 0;
-		margin: 0 !important;*/
 	}
 
 
